--- a/collated/main/A0139633B.md
+++ b/collated/main/A0139633B.md
@@ -1,4 +1,24 @@
 # A0139633B
+###### /java/seedu/todolist/commons/events/storage/SaveLocationChangedEvent.java
+``` java
+/**
+ * Indicates that the location of the save file has been changed
+ */
+public class SaveLocationChangedEvent extends BaseEvent {
+
+    public String newSaveLocation;
+
+    public SaveLocationChangedEvent(String newSaveLocation) {
+        this.newSaveLocation = newSaveLocation;
+    }
+
+    @Override
+    public String toString() {
+        return "todolist.xml is now saved at " + newSaveLocation;
+    }
+
+}
+```
 ###### /java/seedu/todolist/logic/commands/ChangeStoragePathCommand.java
 ``` java
 /*
@@ -19,7 +39,7 @@ public class ChangeStoragePathCommand extends Command {
     private String commandText;
     private final String path;
 
-    //takes in an relative path
+    //takes in an relative or absolute path
     public ChangeStoragePathCommand(String path) {
         this.path = path + "/todolist.xml";
     }
@@ -28,13 +48,63 @@ public class ChangeStoragePathCommand extends Command {
     public CommandResult execute() throws CommandException {
         assert config != null;
         try {
+            //TODO check if the file can be written to the path first (with the storage)
             config.setToDoListFilePath(this.path);
             ConfigUtil.saveConfig(config, Config.DEFAULT_CONFIG_FILE);
             storage.changeToDoListFilePath(this.path);
             storage.saveToDoList(model.getToDoList(), this.path);
+            model.changeStoragePath(this.path);
             return new CommandResult(String.format(MESSAGE_SUCCESS, this.path));
         } catch (IOException e) {
-            e.printStackTrace(); //is this necessary?
+            e.printStackTrace();
+            return new CommandResult(String.format(MESSAGE_FAILURE, this.path));
+        }
+    }
+
+    @Override
+    public boolean isMutating() {
+        return false;
+    }
+
+    @Override
+    public String getCommandText() {
+        return commandText;
+    }
+}
+```
+###### /java/seedu/todolist/logic/commands/ExportSaveCommand.java
+``` java
+/*
+ * Exports the save file of the location
+ */
+public class ExportSaveCommand extends Command {
+
+    public static final String COMMAND_WORD = "exportsave";
+
+    public static final String MESSAGE_USAGE = COMMAND_WORD + ": Exports the saved file for the app. "
+            + "Parameters: PATH_TO_FILE\n"
+            + "Example: " + COMMAND_WORD
+            + " some_folder";
+
+    public static final String MESSAGE_SUCCESS = "Save file exported to: %1$s";
+    public static final String MESSAGE_FAILURE = "Error saving to path: %1$s";
+
+    private String commandText;
+    private final String path;
+
+    //takes in an relative or absolute path
+    public ExportSaveCommand(String path) {
+        this.path = path + "/todolist.xml";
+    }
+
+    @Override
+    public CommandResult execute() throws CommandException {
+        assert config != null;
+        try {
+            storage.saveToDoList(model.getToDoList(), this.path);
+            return new CommandResult(String.format(MESSAGE_SUCCESS, this.path));
+        } catch (IOException e) {
+            e.printStackTrace();
             return new CommandResult(String.format(MESSAGE_FAILURE, this.path));
         }
     }
@@ -128,23 +198,54 @@ public class ListCommand extends Command {
 ###### /java/seedu/todolist/logic/parser/ChangeStoragePathCommandParser.java
 ``` java
 /**
- * Parses input arguments and creates a new DeleteCommand object
+ * Parses input arguments and creates a new ChangeStoragePathCommand object
  */
 public class ChangeStoragePathCommandParser {
 
     /**
-     * Parses the given {@code String} of arguments in the context of the DeleteCommand
-     * and returns an DeleteCommand object for execution.
+     * Parses the given {@code String} of arguments as a file path
+     * and returns an ChangeStoragePathCommand object for execution.
      */
     public Command parse(String args) {
         String path = FileUtil.getPath(args.trim().toLowerCase());
 
-        if (path.equals("")) { //need to think of more things to check for
+        if (isEmptyPath(path)) {
             return new IncorrectCommand(
                     String.format(MESSAGE_INVALID_COMMAND_FORMAT, ChangeStoragePathCommand.MESSAGE_USAGE));
         }
 
         return new ChangeStoragePathCommand(path);
+    }
+
+    private boolean isEmptyPath(String path) {
+        return "".equals(path);
+    }
+}
+```
+###### /java/seedu/todolist/logic/parser/ExportSaveCommandParser.java
+``` java
+/**
+ * Parses input arguments and creates a new ExportSaveCommand object
+ */
+public class ExportSaveCommandParser {
+
+    /**
+     * Parses the given {@code String} of arguments as a file path
+     * and returns an ExportSaveCommand object for execution.
+     */
+    public Command parse(String args) {
+        String path = FileUtil.getPath(args.trim().toLowerCase());
+
+        if (isEmptyPath(path)) {
+            return new IncorrectCommand(
+                    String.format(MESSAGE_INVALID_COMMAND_FORMAT, ExportSaveCommand.MESSAGE_USAGE));
+        }
+
+        return new ExportSaveCommand(path);
+    }
+
+    private boolean isEmptyPath(String path) {
+        return "".equals(path);
     }
 }
 ```
@@ -199,9 +300,41 @@ public class ListCommandParser {
     /** Updates the filter of the filtered task list to filter by the given keywords*/
     void updateFilteredTaskList(Set<String> keywords);
 
+    /** Changes the location where the data is being saved*/
+```
+###### /java/seedu/todolist/model/Model.java
+``` java
+    void changeStoragePath(String newFilePath);
+
 
 
 }
+```
+###### /java/seedu/todolist/model/ModelManager.java
+``` java
+    public synchronized void changeStoragePath(String newFilePath) {
+        raise(new SaveLocationChangedEvent(newFilePath));
+        indicateToDoListChanged(CHANGESTORAGE);
+    }
+
+    @Override
+    public synchronized void addTask(Task task) throws UniqueTaskList.DuplicateTaskException {
+        toDoList.addTask(task);
+        getFilteredIncompleteTaskList();
+        indicateToDoListChanged(ADD);
+    }
+
+    @Override
+    public void updateTask(int filteredTaskListIndex, Task editedTask)
+            throws UniqueTaskList.DuplicateTaskException {
+        assert editedTask != null;
+
+        int toDoListIndex = filteredTasks.getSourceIndex(filteredTaskListIndex);
+        toDoList.updateTask(toDoListIndex, editedTask);
+        indicateToDoListChanged(UPDATE, toDoListIndex);
+    }
+
+    @Override
 ```
 ###### /java/seedu/todolist/model/ModelManager.java
 ``` java
@@ -243,9 +376,27 @@ public class ListCommandParser {
         return new UnmodifiableObservableList<>(filteredTasks);
     }
 
+    @Override
 ```
 ###### /java/seedu/todolist/model/ModelManager.java
 ``` java
+    public UnmodifiableObservableList<Task> getFilteredUpcomingTaskList() {
+        resetViews();
+        isViewUpcoming = true;
+        //get tasks that are incomplete and are not overdue
+        filteredTasks.setPredicate((Predicate<? super Task>) task -> {
+            return isUpcoming(task) && !task.isComplete();
+        });
+        indicateViewListChanged(ListCommand.TYPE_UPCOMING);
+        return new UnmodifiableObservableList<>(filteredTasks);
+    }
+
+```
+###### /java/seedu/todolist/model/ModelManager.java
+``` java
+    /*
+     * Checks if the given task's end date exceeds the current datetime
+     */
     public boolean isOverdue(Task task) {
         SimpleDateFormat dateFormat = new SimpleDateFormat("dd-MM-yyyy h.mm a");
         Date currentDate = new Date();
@@ -263,28 +414,18 @@ public class ListCommandParser {
         }
     }
 
-
-    @Override
 ```
 ###### /java/seedu/todolist/model/ModelManager.java
 ``` java
-    public UnmodifiableObservableList<Task> getFilteredUpcomingTaskList() {
-        resetViews();
-        isViewUpcoming = true;
-        //get tasks that are incomplete and are not overdue
-        filteredTasks.setPredicate((Predicate<? super Task>) task -> {
-            return isUpcoming(task);
-        });
-        indicateViewListChanged(ListCommand.TYPE_UPCOMING);
-        return new UnmodifiableObservableList<>(filteredTasks);
-    }
-
+    /*
+     * Checks that the task is not overdue and not completed
+     */
     private boolean isUpcoming(Task task) {
       //get current time and compare with the task's end time
         SimpleDateFormat dateFormat = new SimpleDateFormat("dd-MM-yyyy h.mm a");
         Date currentDate = new Date();
-        if (task.getEndTime() != null) {
-            String taskDateString = task.getEndTime().toString();
+        if (hasStartTime(task)) {
+            String taskDateString = task.getStartTime().toString();
             try {
                 Date taskDate = dateFormat.parse(taskDateString);
                 return currentDate.compareTo(taskDate) <= 0;
@@ -297,35 +438,48 @@ public class ListCommandParser {
         }
     }
 
-    //Comparator for Date
 ```
 ###### /java/seedu/todolist/model/ModelManager.java
 ``` java
+    //Comparator for Date
     Comparator<? super Task> dateComparator = new Comparator<Task>() {
         @Override
         public int compare(Task firstTask, Task secondTask) {
-            if (firstTask.getEndTime() != null && secondTask.getEndTime() != null) {
+            if (hasStartTime(firstTask) && hasStartTime(secondTask)) {
                 SimpleDateFormat dateFormat = new SimpleDateFormat("dd-MM-yyyy h.mm a");
-                String firstTaskDueDateString = firstTask.getEndTime().toString();
-                String secondTaskDueDateString = secondTask.getEndTime().toString();
+                String firstTaskStartDateString = firstTask.getStartTime().toString();
+                String secondTaskStartDateString = secondTask.getStartTime().toString();
                 try {
-                    Date firstTaskDueDate = dateFormat.parse(firstTaskDueDateString);
-                    Date secondTaskDueDate = dateFormat.parse(secondTaskDueDateString);
-                    return firstTaskDueDate.compareTo(secondTaskDueDate);
+                    Date firstTaskStartDate = dateFormat.parse(firstTaskStartDateString);
+                    Date secondTaskStartDate = dateFormat.parse(secondTaskStartDateString);
+                    return firstTaskStartDate.compareTo(secondTaskStartDate);
                 } catch (ParseException e) {
                     e.printStackTrace();
-                    return 0; //dummy value
+                    return ERROR_VALUE;
                 }
             } else {
-                return 1;
+                return NO_SWAP;
             }
         }
     };
 
+```
+###### /java/seedu/todolist/model/ModelManager.java
+``` java
+    private boolean hasStartTime(Task task) {
+        return task.getStartTime() != null;
+    }
+
+```
+###### /java/seedu/todolist/model/ModelManager.java
+``` java
+    private boolean hasEndTime(Task task) {
+        return task.getEndTime() != null;
+    }
+
     @Override
     public void updateFilteredListToShowAll() {
         resetViews();
-        isViewAll = true;
         indicateViewListChanged(ListCommand.TYPE_ALL);
         filteredTasks.setPredicate(null);
     }
@@ -384,6 +538,48 @@ public class ListCommandParser {
         File file = new File(filePath);
         FileUtil.createIfMissing(file);
         XmlFileStorage.saveDataToFile(file, new XmlSerializableToDoList(toDoList));
+    }
+
+}
+```
+###### /java/seedu/todolist/ui/MainWindow.java
+``` java
+    public void updateSaveLocationInFooter(String newPath) {
+        statusBarFooter.setSaveLocation(newPath);
+    }
+
+    void show() {
+        primaryStage.show();
+    }
+
+    /**
+     * Closes the application.
+     */
+    @FXML
+    private void handleExit() {
+        raise(new ExitAppRequestEvent());
+    }
+
+    public TaskListPanel getTaskListPanel() {
+        return this.taskListPanel;
+    }
+
+    void loadPersonPage(Task person) {
+        taskDetailsPanel.loadPersonPage(person);
+    }
+
+    void releaseResources() {
+        taskDetailsPanel.freeResources();
+    }
+
+
+```
+###### /java/seedu/todolist/ui/UiManager.java
+``` java
+    @Subscribe
+    private void handleSaveLocationChangedEvent(ToDoListChangedEvent event) {
+        logger.info(LogsCenter.getEventHandlingLogMessage(event));
+        mainWindow.updateSaveLocationInFooter(config.getToDoListFilePath());
     }
 
 }
