--- a/collated/main/A0141647E.md
+++ b/collated/main/A0141647E.md
@@ -1,4 +1,60 @@
 # A0141647E
+###### /java/seedu/todolist/commons/util/SuggestUtil.java
+``` java
+/*
+ * Contains method that suggests the most likely correct command
+ * if the user key in an unknown command.
+ */
+public class SuggestUtil {
+
+```
+###### /java/seedu/todolist/commons/util/SuggestUtil.java
+``` java
+    public static String closestCommand(String userCommandType) {
+        int distance = 100;
+        String mostRelatedCommandType = "";
+        for (int i = 0; i < Command.COMMAND_ALL_TYPES.length; i++) {
+            int difference = levenshteinDistance(Command.COMMAND_ALL_TYPES[i], userCommandType);
+            if (difference < distance ||
+                    (difference == distance &&
+                    Command.COMMAND_ALL_TYPES[i].charAt(0) == userCommandType.charAt(0))) {
+                distance = difference;
+                mostRelatedCommandType = Command.COMMAND_ALL_TYPES[i];
+            }
+        }
+        return mostRelatedCommandType;
+    }
+
+```
+###### /java/seedu/todolist/commons/util/SuggestUtil.java
+``` java
+    public static int levenshteinDistance(String string1, String string2) {
+        char[] s1 = string1.toCharArray();
+        char[] s2 = string2.toCharArray();
+        int n1 = s1.length; int n2 = s2.length;
+        int[][] d = new int[n1 + 1][n2 + 1];
+        for (int i = 1; i < n1 + 1; i++) {
+            d[i][0] = i;
+        }
+        for (int j = 1; j < n2 + 1; j++) {
+            d[0][j] = j;
+        }
+        for (int j = 0; j < n2; j++) {
+            for (int i = 0; i < n1; i++) {
+                int substitutionCost;
+                if (s1[i] == s2[j]) {
+                    substitutionCost = 0;
+                } else {
+                    substitutionCost = 1;
+                }
+                d[i + 1][j + 1] = Math.min(Math.min(d[i][j + 1] + 1, d[i + 1][j] + 1), d[i][j] + substitutionCost);
+            }
+        }
+        return d[n1][n2];
+    }
+
+}
+```
 ###### /java/seedu/todolist/logic/commands/CompleteCommand.java
 ``` java
 /**
@@ -216,25 +272,7 @@ public class DescribeCommandParser {
     }
 
     @Override
-    public synchronized void addTask(Task task) throws UniqueTaskList.DuplicateTaskException {
-        toDoList.addTask(task);
-        getFilteredIncompleteTaskList();
-        indicateToDoListChanged(ADD);
-       // EventsCenter.getInstance().post(new JumpToListRequestEvent(index - 1));
-
-    }
-
-    @Override
-    public void updateTask(int filteredTaskListIndex, Task editedTask)
-            throws UniqueTaskList.DuplicateTaskException {
-        assert editedTask != null;
-
-        int toDoListIndex = filteredTasks.getSourceIndex(filteredTaskListIndex);
-        toDoList.updateTask(toDoListIndex, editedTask);
-        indicateToDoListChanged(UPDATE, toDoListIndex);
-    }
-
-    @Override
+    //TODO add error throwing for unwritable save locations
 ```
 ###### /java/seedu/todolist/model/ModelManager.java
 ``` java
@@ -253,15 +291,6 @@ public class DescribeCommandParser {
         return new UnmodifiableObservableList<>(filteredTasks);
     }
 
-    @Override
-    public UnmodifiableObservableList<Task> getSortedTaskList() {
-        return new UnmodifiableObservableList<>(sortedTasks);
-    }
-
-
-
-
-    @Override
 ```
 ###### /java/seedu/todolist/model/task/EndTask.java
 ``` java
@@ -508,41 +537,34 @@ public class TaskParser {
         ArgumentTokenizer argsTokenizer =
                 new ArgumentTokenizer(PREFIX_START, PREFIX_END, PREFIX_TAG);
         argsTokenizer.tokenize(taskInput);
+
+        String name;
+        String startTime;
+        String endTime;
+        Set<String> tags;
+
         try {
-            String name = argsTokenizer.getPreamble().get();
-            String startTime = (argsTokenizer.getValue(PREFIX_START).isPresent() ?
+            name = argsTokenizer.getPreamble().get();
+            startTime = (argsTokenizer.getValue(PREFIX_START).isPresent() ?
                     argsTokenizer.getValue(PREFIX_START).get()
                     : null);
-            String endTime = (argsTokenizer.getValue(PREFIX_END).isPresent() ?
+            endTime = (argsTokenizer.getValue(PREFIX_END).isPresent() ?
                     argsTokenizer.getValue(PREFIX_END).get()
                     : null);
-            Set<String> tags = ParserUtil.toSet(argsTokenizer.getAllValues(PREFIX_TAG));
-
-            final Set<Tag> tagSet = new HashSet<>();
-            for (String tagName : tags) {
-                tagSet.add(new Tag(tagName));
-            }
-
-            if (startTime != null && endTime != null) {
-                return new StartEndTask(new Name(name),
-                        new StartTime(startTime),
-                        new EndTime(endTime),
-                        new UniqueTagList(tagSet));
-            } else if (startTime != null && endTime == null) {
-                return new StartTask(new Name(name),
-                        new StartTime(startTime),
-                        new UniqueTagList(tagSet));
-            } else if (startTime == null && endTime != null) {
-                return new EndTask(new Name(name),
-                        new EndTime(endTime),
-                        new UniqueTagList(tagSet));
-            } else {
-                return new FloatingTask(new Name(name),
-                        new UniqueTagList(tagSet));
-            }
+            tags = ParserUtil.toSet(argsTokenizer.getAllValues(PREFIX_TAG));
         } catch (NoSuchElementException nsse) {
             throw new NoSuchElementException(MESSAGE_INVALID_TASK);
         }
+
+        final Set<Tag> tagSet = new HashSet<>();
+        for (String tagName : tags) {
+            tagSet.add(new Tag(tagName));
+        }
+
+        return parseTask(new Name(name),
+                (startTime != null ? new StartTime(startTime) : null),
+                (endTime != null ? new EndTime(endTime) : null),
+                new UniqueTagList(tagSet));
     }
 
 ```
@@ -612,19 +634,9 @@ public class TaskParser {
         EndTime endTime = taskToCopy.getEndTime();
         UniqueTagList uniqueTagList = taskToCopy.getTags();
         boolean isComplete = taskToCopy.isComplete();
+        String description = taskToCopy.getDescription();
 
-        if (startTime != null && endTime != null) {
-            return new StartEndTask(name, startTime, endTime,
-                    uniqueTagList, isComplete);
-        } else if (startTime != null && endTime == null) {
-            return new StartTask(name, startTime,
-                    uniqueTagList, isComplete);
-        } else if (startTime == null && endTime != null) {
-            return new EndTask(name, endTime,
-                    uniqueTagList, isComplete);
-        } else {
-            return new FloatingTask(name, uniqueTagList, isComplete);
-        }
+        return parseTask(name, startTime, endTime, uniqueTagList, isComplete, description);
     }
 }
 ```
