--- a/collated/main/A0144240W.md
+++ b/collated/main/A0144240W.md
@@ -16,6 +16,73 @@ public class ViewListChangedEvent extends BaseEvent {
 }
 
 ```
+###### /java/seedu/todolist/commons/util/FindUtil.java
+``` java
+    /**
+     * Returns true if the task has keywords in its tags or name
+     * @param keywords cannot be null
+     *
+     */
+    public static boolean containsIgnoreCase(Task task, Set<String> keywords) {
+        assert task != null : "task parameter cannot be null";
+        assert keywords != null : "keywords parameter cannot be null";
+
+
+        for (String word : keywords) {
+            String preppedWord = word.trim();
+            assert !preppedWord.isEmpty() : "set cannot contain all spaces";
+            if (preppedWord.startsWith("t/")) {
+                String preppedTag = preppedWord.substring(2);
+                if (matchTag(task.getTags().toSet(), preppedTag)) {
+                    return true;
+                }
+            } else {
+                if (matchName(task.getName().toString(), preppedWord)) {
+                    return true;
+                }
+            }
+        }
+        return false;
+    }
+
+
+```
+###### /java/seedu/todolist/commons/util/FindUtil.java
+``` java
+    /**
+     * Returns true if the set of tags contain the searchTag
+     * Ignores case, a full tag match is required.
+     * @return
+     */
+    private static boolean matchTag(Set<Tag> tags, String searchTag) {
+        for (Tag tag : tags) {
+            if (tag.getTagName().toLowerCase().equals(searchTag.toLowerCase())) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+
+```
+###### /java/seedu/todolist/commons/util/FindUtil.java
+``` java
+    /**
+     * Returns true if the taskName contains the searchName
+     * Ignores case, a full word match is not required.
+     * @param taskName must not be null
+     * @param searchName must not be null
+     *
+     */
+    private static boolean matchName(String taskName, String searchName) {
+        if (taskName.toLowerCase().contains(searchName.toLowerCase())) {
+            return true;
+        }
+        return false;
+    }
+}
+
+```
 ###### /java/seedu/todolist/model/ModelManager.java
 ``` java
     /** Raises an event to indicate that the filteredList has changed */
@@ -27,6 +94,15 @@ public class ViewListChangedEvent extends BaseEvent {
     public synchronized void deleteTask(Task target) throws TaskNotFoundException {
         toDoList.removeTask(target);
         indicateToDoListChanged(DELETE);
+    }
+
+    @Override
+```
+###### /java/seedu/todolist/model/ModelManager.java
+``` java
+    @Override
+    public UnmodifiableObservableList<Task> getSortedTaskList() {
+        return new UnmodifiableObservableList<>(sortedTasks);
     }
 
     @Override
@@ -59,8 +135,8 @@ public class ViewListChangedEvent extends BaseEvent {
      * @param keywords
      * @return
      */
-    private Predicate<Task> findInIncomplete(Set<String> keywords) {
-        return p -> !p.isComplete() && containsIgnoreCase(p, keywords);
+    public Predicate<Task> findInIncomplete(Set<String> keywords) {
+        return p -> !p.isComplete() && FindUtil.containsIgnoreCase(p, keywords);
     }
 
 ```
@@ -71,8 +147,8 @@ public class ViewListChangedEvent extends BaseEvent {
      * @param keywords cannot be null
      *
      */
-    private Predicate<Task> findInComplete(Set<String> keywords) {
-        return p -> p.isComplete() && containsIgnoreCase(p, keywords);
+    public Predicate<Task> findInComplete(Set<String> keywords) {
+        return p -> p.isComplete() && FindUtil.containsIgnoreCase(p, keywords);
     }
 
 ```
@@ -83,8 +159,8 @@ public class ViewListChangedEvent extends BaseEvent {
      * @param keywords cannot be null
      *
      */
-    private Predicate<Task> findInOverdue(Set<String> keywords) {
-        return p -> isOverdue(p) && containsIgnoreCase(p, keywords);
+    public Predicate<Task> findInOverdue(Set<String> keywords) {
+        return p -> isOverdue(p) && FindUtil.containsIgnoreCase(p, keywords);
     }
 
 ```
@@ -95,8 +171,8 @@ public class ViewListChangedEvent extends BaseEvent {
      * @param keywords cannot be null
      *
      */
-    private Predicate<Task> findInUpcoming(Set<String> keywords) {
-        return p -> isUpcoming(p) && containsIgnoreCase(p, keywords);
+    public Predicate<Task> findInUpcoming(Set<String> keywords) {
+        return p -> isUpcoming(p) && FindUtil.containsIgnoreCase(p, keywords);
     }
 
 ```
@@ -107,69 +183,10 @@ public class ViewListChangedEvent extends BaseEvent {
      * @param keywords cannot be null
      *
      */
-    private Predicate<Task> findInAll(Set<String> keywords) {
-        return p -> containsIgnoreCase(p, keywords);
+    public Predicate<Task> findInAll(Set<String> keywords) {
+        return p -> FindUtil.containsIgnoreCase(p, keywords);
     }
 
-
-```
-###### /java/seedu/todolist/model/ModelManager.java
-``` java
-    /**
-     * Returns true if the task has keywords in its tags or name
-     * @param keywords cannot be null
-     *
-     */
-    private boolean containsIgnoreCase(Task task, Set<String> keywords) {
-        for (String word : keywords) {
-            String preppedWord = word.trim();
-            if (preppedWord.startsWith("t/")) {
-                String preppedTag = preppedWord.substring(2);
-                if (matchTag(task.getTags().toSet(), preppedTag)) {
-                    return true;
-                }
-            } else {
-                if (matchName(task.getName().toString(), preppedWord)) {
-                    return true;
-                }
-            }
-        }
-        return false;
-    }
-
-```
-###### /java/seedu/todolist/model/ModelManager.java
-``` java
-    /**
-     * Returns true if the set of tags contain the searchTag
-     * Ignores case, a full tag match is required.
-     * @return
-     */
-    private boolean matchTag(Set<Tag> tags, String searchTag) {
-        for (Tag tag : tags) {
-            if (tag.getTagName().toLowerCase().equals(searchTag.toLowerCase())) {
-                return true;
-            }
-        }
-        return false;
-    }
-
-```
-###### /java/seedu/todolist/model/ModelManager.java
-``` java
-    /**
-     * Returns true if the taskName contains the searchName
-     * Ignores case, a full word match is not required.
-     * @param taskName must not be null
-     * @param searchName must not be null
-     *
-     */
-    private boolean matchName(String taskName, String searchName) {
-        if (taskName.toLowerCase().contains(searchName.toLowerCase())) {
-            return true;
-        }
-        return false;
-    }
 
 ```
 ###### /java/seedu/todolist/model/ModelManager.java
@@ -182,44 +199,12 @@ public class ViewListChangedEvent extends BaseEvent {
         isViewIncomplete = false;
         isViewOverdue = false;
         isViewUpcoming = false;
-        isViewAll = false;
     }
 }
 
 
 
 
-```
-###### /java/seedu/todolist/ui/BrowserPanel.java
-``` java
-
-    /**
-     * @param placeholder The AnchorPane where the BrowserPanel must be inserted
-     */
-    public BrowserPanel(AnchorPane placeholder) {
-        super(FXML);
-        FxViewUtil.applyAnchorBoundaryParameters(display, 0.0, 0.0, 0.0, 0.0);
-        placeholder.getChildren().add(display);
-    }
-
-```
-###### /java/seedu/todolist/ui/BrowserPanel.java
-``` java
-    public void loadPersonPage(Task task) {
-        tagsFlow.setHgap(10);
-        nameLabel.setText(task.getName().toString());
-        tagsheader.setText("Tags:");
-        task.getTags().forEach(tag -> tagsFlow.getChildren().add(new Label(tag.tagName)));
-    }
-
-```
-###### /java/seedu/todolist/ui/BrowserPanel.java
-``` java
-    public void freeResources() {
-        tagsFlow.getChildren().clear();
-    }
-
-}
 ```
 ###### /java/seedu/todolist/ui/MainWindow.java
 ``` java
@@ -265,31 +250,6 @@ public class ViewListChangedEvent extends BaseEvent {
         logic.execute(command);
     }
 
-    void show() {
-        primaryStage.show();
-    }
-
-    /**
-     * Closes the application.
-     */
-    @FXML
-    private void handleExit() {
-        raise(new ExitAppRequestEvent());
-    }
-
-    public TaskListPanel getTaskListPanel() {
-        return this.taskListPanel;
-    }
-
-    void loadPersonPage(Task person) {
-        browserPanel.loadPersonPage(person);
-    }
-
-    void releaseResources() {
-        browserPanel.freeResources();
-    }
-
-
 ```
 ###### /java/seedu/todolist/ui/MainWindow.java
 ``` java
@@ -326,6 +286,40 @@ public class ViewListChangedEvent extends BaseEvent {
 
 }
 ```
+###### /java/seedu/todolist/ui/TaskDetailsPanel.java
+``` java
+
+    /**
+     * @param placeholder The AnchorPane where the taskDetailsPanel must be inserted
+     */
+    public TaskDetailsPanel(AnchorPane placeholder) {
+        super(FXML);
+        FxViewUtil.applyAnchorBoundaryParameters(display, 0.0, 0.0, 0.0, 0.0);
+        placeholder.getChildren().add(display);
+    }
+
+```
+###### /java/seedu/todolist/ui/TaskDetailsPanel.java
+``` java
+    public void loadPersonPage(Task task) {
+        tags.setHgap(10);
+        nameLabel.setText("Name of task: " + task.getName().toString());
+        startLabel.setText("From: " + (task.getStartTime() != null ? task.getStartTime().toString() : ""));
+        endLabel.setText("To: " + (task.getEndTime() != null ? task.getEndTime().toString() : ""));
+        description.setText("Description: " + (task.getDescription() != null ? task.getDescription() : ""));
+        tagsheader.setText("Tags:");
+        task.getTags().forEach(tag -> tags.getChildren().add(new Label(tag.tagName)));
+    }
+
+```
+###### /java/seedu/todolist/ui/TaskDetailsPanel.java
+``` java
+    public void freeResources() {
+        tags.getChildren().clear();
+    }
+
+}
+```
 ###### /java/seedu/todolist/ui/UiManager.java
 ``` java
     @Subscribe
@@ -346,5 +340,4 @@ public class ViewListChangedEvent extends BaseEvent {
         }
     }
 
-}
 ```
